--- a/public/styles/tweet.css
+++ b/public/styles/tweet.css
@@ -1,6 +1,7 @@
 .tweet {
-  display: flex;
-  flex-wrap: wrap;
+  flex-direction: flex-end;
+  /* display: flex;
+  flex-wrap: wrap; */
   justify-content: space-between;
   width: 93.6%;
   margin: 0 auto;
@@ -8,10 +9,16 @@
   border-radius: 5px;
   margin-bottom: 20px;
   padding: 1em;
+  word-break: break-all;
+}
+/* Hover State */
+.tweet:hover {
+  box-shadow: 5px 5px 5px 5px rgba(75, 73, 73, 0.5)
 }
 
 .tweet .user {
   display: flex;
+  flex-direction: row;
   align-items: center;
 }
 
@@ -23,8 +30,14 @@
 }
 
 
-.tweet .tweet-text {
+.user-handle {
+  margin-left: auto; 
+  color: #999999;
+}
+
+.tweet-text {
   margin: 1em;
+  flex-basis: 100%;
 }
 
 hr.solid {
@@ -34,7 +47,6 @@ hr.solid {
 .tweet footer {
   display: flex;
   justify-content: space-between;
-  align-items: center;
 }
 
 .tweet footer .tweet-time {
@@ -42,17 +54,24 @@ hr.solid {
   font-size: small;
 }
 
-.tweet footer .tweet-icons {
+/* Styles for the tweet icons */
+.tweet-icons {
   margin-right: 0.5em;
-  color: #999999;
+  color: #4056A1;
   cursor: pointer;
 }
 
-/* Hover State */
-.tweet:hover {
-  box-shadow: 0 0 5px rgba(0, 0, 0, 0.2);
+/* Hover state for the flag icon */
+.tweet-icons .fa-flag:hover {
+  color: #75622c;
 }
 
-.tweet:hover footer .tweet-icons {
-  color: #4056A1;
+/* Hover state for the retweet icon */
+.tweet-icons .fa-retweet:hover {
+  color: #75622c;
+}
+
+/* Hover state for the heart icon */
+.tweet-icons .fa-heart:hover {
+  color: #75622c;
 }
